ingressrule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server-ingress-rule
  namespace: apm
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.wiz-obi.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: grafana-ingress-rule
   namespace: apm
 spec:
   ingressClassName: nginx
   rules:
   - host: grafana.wiz-obi.com
     http:
       paths:
       - pathType: Prefix
         path: "/"
         backend:
           service:
             name: grafana
             port:
               number: 3000
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: alertmanager-ingress-rule
    namespace: apm
  spec:
    ingressClassName: nginx
    rules:
    - host: alertmanager.wiz-obi.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: prometheus-alertmanager
              port:
                number: 9093
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: efk-ingress-rule
  namespace: efk
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.wiz-obi.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kibana-kibana
            port:
              number: 5601
